--- a/portfolio.html
+++ b/portfolio.html
@@ -92,9 +92,7 @@ I am having the expertise and high bug solving skills and could easily get on bo
 									<i class="fas fa-cogs fa-fw mr-2"></i>More Pages
 								</a>
 								<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-									<a class="dropdown-item" href="project.html">Project Page</a>
-									<a class="dropdown-item" href="blog-home.html">Blog Home 1</a>
-									<a class="dropdown-item" href="blog-home-alt.html">Blog Home 2</a>
+									<a class="dropdown-item" href="blog-home.html">Blog</a>
 									<a class="dropdown-item" href="blog-post.html">Blog Post</a>
 								</div>
 							</li>
@@ -159,18 +157,19 @@ I am having the expertise and high bug solving skills and could easily get on bo
 									</div>
 									<div class="col-lg-8">
 										<div class="card-body">
-											<h5 class="card-title"><a href="project.html" class="theme-link">Project Heading</a></h5>
-											<p class="card-text">Project intro lorem ipsum dolor sit amet, consectetuer adipiscing elit. Cum
-												sociis natoque penatibus et magnis dis parturient montes.</p>
-											<p class="card-text"><small class="text-muted">Client: Google</small></p>
+											<h5 class="card-title"><a href="project.html" class="theme-link">Free-Ela</a></h5>
+											<p class="card-text">Free-ela is a Micro Job Marketplace site where you can sell or buy service at
+												a incredible price.
+												I have worked with HTML5, CSS3, Scss, Javascript, QJuery and forms on this project.</p>
+											<p class="card-text"><small class="text-muted">Client: Hafiz Aqib</small></p>
 										</div>
 									</div>
 								</div>
 								<div class="link-mask">
 									<a class="link-mask-link" href="project.html"></a>
 									<div class="link-mask-text">
-										<a class="btn btn-secondary" href="project.html">
-											<i class="fas fa-eye mr-2"></i>View Case Study
+										<a target="_blank" class="btn btn-secondary" href="https://free-ela.netlify.com/">
+											<i class="fas fa-eye mr-2"></i>View Detail
 										</a>
 									</div>
 								</div>
@@ -197,8 +196,8 @@ I am having the expertise and high bug solving skills and could easily get on bo
 								<div class="link-mask">
 									<a class="link-mask-link" href="project.html"></a>
 									<div class="link-mask-text">
-										<a class="btn btn-secondary" href="project.html">
-											<i class="fas fa-eye mr-2"></i>View Case Study
+										<a target="_blank" class="btn btn-secondary" href="project.html">
+											<i class="fas fa-eye mr-2"></i>View Detail
 										</a>
 									</div>
 								</div>
@@ -225,8 +224,8 @@ I am having the expertise and high bug solving skills and could easily get on bo
 								<div class="link-mask">
 									<a class="link-mask-link" href="project.html"></a>
 									<div class="link-mask-text">
-										<a class="btn btn-secondary" href="project.html">
-											<i class="fas fa-eye mr-2"></i>View Case Study
+										<a target="_blank" class="btn btn-secondary" href="project.html">
+											<i class="fas fa-eye mr-2"></i>View Detail
 										</a>
 									</div>
 								</div>
@@ -253,8 +252,8 @@ I am having the expertise and high bug solving skills and could easily get on bo
 								<div class="link-mask">
 									<a class="link-mask-link" href="project.html"></a>
 									<div class="link-mask-text">
-										<a class="btn btn-secondary" href="project.html">
-											<i class="fas fa-eye mr-2"></i>View Case Study
+										<a target="_blank" class="btn btn-secondary" href="project.html">
+											<i class="fas fa-eye mr-2"></i>View Detail
 										</a>
 									</div>
 								</div>
@@ -281,8 +280,8 @@ I am having the expertise and high bug solving skills and could easily get on bo
 								<div class="link-mask">
 									<a class="link-mask-link" href="project.html"></a>
 									<div class="link-mask-text">
-										<a class="btn btn-secondary" href="project.html">
-											<i class="fas fa-eye mr-2"></i>View Case Study
+										<a target="_blank" class="btn btn-secondary" href="project.html">
+											<i class="fas fa-eye mr-2"></i>View Detail
 										</a>
 									</div>
 								</div>
@@ -309,8 +308,8 @@ I am having the expertise and high bug solving skills and could easily get on bo
 								<div class="link-mask">
 									<a class="link-mask-link" href="project.html"></a>
 									<div class="link-mask-text">
-										<a class="btn btn-secondary" href="project.html">
-											<i class="fas fa-eye mr-2"></i>View Case Study
+										<a target="_blank" class="btn btn-secondary" href="project.html">
+											<i class="fas fa-eye mr-2"></i>View Detail
 										</a>
 									</div>
 								</div>
@@ -337,8 +336,8 @@ I am having the expertise and high bug solving skills and could easily get on bo
 								<div class="link-mask">
 									<a class="link-mask-link" href="project.html"></a>
 									<div class="link-mask-text">
-										<a class="btn btn-secondary" href="project.html">
-											<i class="fas fa-eye mr-2"></i>View Case Study
+										<a target="_blank" class="btn btn-secondary" href="project.html">
+											<i class="fas fa-eye mr-2"></i>View Detail
 										</a>
 									</div>
 								</div>
@@ -365,8 +364,8 @@ I am having the expertise and high bug solving skills and could easily get on bo
 								<div class="link-mask">
 									<a class="link-mask-link" href="project.html"></a>
 									<div class="link-mask-text">
-										<a class="btn btn-secondary" href="project.html">
-											<i class="fas fa-eye mr-2"></i>View Case Study
+										<a target="_blank" class="btn btn-secondary" href="project.html">
+											<i class="fas fa-eye mr-2"></i>View Detail
 										</a>
 									</div>
 								</div>
