--- a/services.html
+++ b/services.html
@@ -91,9 +91,7 @@ I am having the expertise and high bug solving skills and could easily get on bo
 									<i class="fas fa-cogs fa-fw mr-2"></i>More Pages
 								</a>
 								<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-									<a class="dropdown-item" href="project.html">Project Page</a>
-									<a class="dropdown-item" href="blog-home.html">Blog Home 1</a>
-									<a class="dropdown-item" href="blog-home-alt.html">Blog Home 2</a>
+									<a class="dropdown-item" href="blog-home.html">Blog</a>
 									<a class="dropdown-item" href="blog-post.html">Blog Post</a>
 								</div>
 							</li>
@@ -125,10 +123,10 @@ I am having the expertise and high bug solving skills and could easily get on bo
 				<div class="container text-center single-col-max-width">
 					<h2 class="heading">Services &amp; Pricing</h2>
 					<div class="intro">
-						<p>I have 10+ years of development experience building software for the web and mobile devices. You can take
-							a look at my <a href="portfolio.html" target="_blank">project portfolio</a> and <a href="resume.html"
+						<p>I have 2+ years of development experience building software for the web. You can take
+							a look at my <a href="./portfolio.html" target="_blank">project portfolio</a> and <a href="./resume.html"
 								target="_blank">online resume</a> to find out more about my skills and experiences.</p>
-						<p class="mb-0">I'm currently taking on freelance software development work. You're welcome to contact me
+						<p class="mb-0">I'm currently taking on freelance web development work. You're welcome to contact me
 							for a custom quote for your project. I also offer development service packages with fixed pricing. </p>
 					</div>
 
@@ -158,19 +156,19 @@ I am having the expertise and high bug solving skills and could easily get on bo
 						<tbody>
 							<tr class="pricing-price-row">
 								<th scope="row" class="pricing-0-data">Package Price</th>
-								<td class="pricing-1-data"><span class="price-number">$900</span></td>
-								<td class="pricing-2-data mobile-is-hidden"><span class="price-number">$2500</span></td>
-								<td class="pricing-3-data mobile-is-hidden"><span class="price-number">$5000+</span></td>
+								<td class="pricing-1-data"><span class="price-number">$50+</span></td>
+								<td class="pricing-2-data mobile-is-hidden"><span class="price-number">$350+</span></td>
+								<td class="pricing-3-data mobile-is-hidden"><span class="price-number">$750+</span></td>
 							</tr>
 
 							<tr class="pricing-desc-row">
 								<th scope="row" class="pricing-0-data">Details</th>
-								<td class="pricing-1-data"><span class="pricing-package-desc">A small app lorem ipsum dolor sit amet,
-										consectetuer adipiscing elit. Aenean commodo ligula eget dolor.</span></td>
-								<td class="pricing-2-data mobile-is-hidden"><span class="pricing-package-desc">An medium app lorem ipsum
-										dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.</span></td>
-								<td class="pricing-3-data mobile-is-hidden"><span class="pricing-package-desc">A complex app lorem ipsum
-										dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.</span></td>
+								<td class="pricing-1-data"><span class="pricing-package-desc">Simple 3 to 4 Section Page Website with
+										fully responsivness.</span></td>
+								<td class="pricing-2-data mobile-is-hidden"><span class="pricing-package-desc">omplex pages of a website
+										with PSD design if demanded.</span></td>
+								<td class="pricing-3-data mobile-is-hidden"><span class="pricing-package-desc">Fully Responsive
+										website.</span></td>
 							</tr>
 
 							<tr class="pricing-feature-row">
@@ -187,10 +185,9 @@ I am having the expertise and high bug solving skills and could easily get on bo
 										ipsum dolor sit amet, consectetuer adipiscing elit.</small></th>
 								<td class="pricing-1-data"><i class="fas fa-check text-primary"></i></td>
 								<td class="pricing-2-data mobile-is-hidden"><i class="fas fa-check text-primary"></i></td>
-								<td class="pricing-3-data mobile-is-hidden"><i class="fas fa-check text-primary"></i></td>
 							</tr>
 							<tr class="pricing-feature-row">
-								<th class="pricing-feature-row-name pricing-0-data" scope="row">Feature Commodo</th>
+								<th class="pricing-feature-row-name pricing-0-data" scope="row">Responsive</th>
 								<td class="pricing-1-data"><i class="fas fa-check text-primary"></i></td>
 								<td class="pricing-2-data mobile-is-hidden"><i class="fas fa-check text-primary"></i></td>
 								<td class="pricing-3-data mobile-is-hidden"><i class="fas fa-check text-primary"></i></td>
@@ -204,11 +201,11 @@ I am having the expertise and high bug solving skills and could easily get on bo
 							<tr class="pricing-feature-row">
 								<th class="pricing-feature-row-name pricing-0-data" scope="row">Feature Aenean</th>
 								<td class="pricing-1-data"><span class="text-muted">–</span></td>
-								<td class="pricing-2-data mobile-is-hidden"><span class="text-muted">–</span></i></td>
+								<td class="pricing-2-data mobile-is-hidden"><span class="text-muted">–</span></td>
 								<td class="pricing-3-data mobile-is-hidden"><i class="fas fa-check text-primary"></i></td>
 							</tr>
 							<tr class="pricing-feature-row">
-								<th class="pricing-feature-row-name pricing-0-data" scope="row">Feature Duis</th>
+								<th class="pricing-feature-row-name pricing-0-data" scope="row">Source File</th>
 								<td class="pricing-1-data"><span class="text-muted">–</span></td>
 								<td class="pricing-2-data mobile-is-hidden"><span class="text-muted">–</span></td>
 								<td class="pricing-3-data mobile-is-hidden"><i class="fas fa-check text-primary"></i></td>
@@ -221,9 +218,9 @@ I am having the expertise and high bug solving skills and could easily get on bo
 							</tr>
 							<tr class="pricing-feature-row">
 								<th class="pricing-feature-row-name pricing-0-data" scope="row">Delivery Time</th>
-								<td class="pricing-1-data">7 days</td>
-								<td class="pricing-2-data mobile-is-hidden">14 days</td>
-								<td class="pricing-3-data mobile-is-hidden">2 - 3 month(s)</td>
+								<td class="pricing-1-data">5 days</td>
+								<td class="pricing-2-data mobile-is-hidden">10 days</td>
+								<td class="pricing-3-data mobile-is-hidden">1 - 2 month(s)</td>
 							</tr>
 
 						</tbody>
@@ -252,36 +249,13 @@ I am having the expertise and high bug solving skills and could easily get on bo
 						<div class="card border-0 mb-3">
 							<div class="card-header border-0 p-3 theme-bg-light">
 								<h4 class="card-title mb-0"><a data-parent="#faq-accordion" data-toggle="collapse"
-										class="card-toggle collapsed" href="#faq1" aria-expanded="false"><i
-											class="fas fa-chevron-down"></i>Can you sit amet quam eget lacinia?</a></h4>
-							</div>
-
-							<div class="card-collapse collapse" id="faq1">
-								<div class="card-body pt-0 theme-bg-light">
-									Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean
-									massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec
-									quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec
-									pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a,
-									venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium.
-								</div>
-								<!--//card-body-->
-							</div>
-						</div>
-						<!--//card-->
-						<div class="card border-0 mb-3">
-							<div class="card-header border-0 p-3 theme-bg-light">
-								<h4 class="card-title mb-0"><a data-parent="#faq-accordion" data-toggle="collapse"
 										class="card-toggle collapsed" href="#faq2" aria-expanded="false"><i
-											class="fas fa-chevron-down"></i>What is the ipsum dolor sit amet quam tortor?</a></h4>
+											class="fas fa-chevron-down"></i>Can you reduce your product price?</a></h4>
 							</div>
 
 							<div class="card-collapse collapse" id="faq2">
 								<div class="card-body pt-0 theme-bg-light">
-									Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean
-									massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec
-									quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec
-									pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a,
-									venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium.
+									Yes, it depends on the package selected
 								</div>
 								<!--//card-body-->
 							</div>
@@ -291,16 +265,12 @@ I am having the expertise and high bug solving skills and could easily get on bo
 							<div class="card-header border-0 p-3 theme-bg-light">
 								<h4 class="card-title mb-0"><a data-parent="#faq-accordion" data-toggle="collapse"
 										class="card-toggle collapsed" href="#faq3" aria-expanded="false"><i
-											class="fas fa-chevron-down"></i>What if ultricies nec vulputate eget?</a></h4>
+											class="fas fa-chevron-down"></i>Is the delivery time exectly mentioned in your gig?</a></h4>
 							</div>
 
 							<div class="card-collapse collapse" id="faq3">
 								<div class="card-body pt-0 theme-bg-light">
-									Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean
-									massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec
-									quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec
-									pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a,
-									venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium.
+									Well, the delivery time will be less then mentioned in the gig.
 								</div>
 								<!--//card-body-->
 							</div>
@@ -310,16 +280,12 @@ I am having the expertise and high bug solving skills and could easily get on bo
 							<div class="card-header border-0 p-3 theme-bg-light">
 								<h4 class="card-title mb-0"><a data-parent="#faq-accordion" data-toggle="collapse"
 										class="card-toggle collapsed" href="#faq4" aria-expanded="false"><i
-											class="fas fa-chevron-down"></i>Is it possible to tellus eget auctor condimentum?</a></h4>
+											class="fas fa-chevron-down"></i>Will you do modification after completing the project?</a></h4>
 							</div>
 
 							<div class="card-collapse collapse" id="faq4">
 								<div class="card-body pt-0 theme-bg-light">
-									Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean
-									massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec
-									quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec
-									pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a,
-									venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium.
+									Yes, even after completing the project i will do changes according to the requirement.
 								</div>
 								<!--//card-body-->
 							</div>
@@ -330,16 +296,12 @@ I am having the expertise and high bug solving skills and could easily get on bo
 							<div class="card-header border-0 p-3 theme-bg-light">
 								<h4 class="card-title mb-0"><a data-parent="#faq-accordion" data-toggle="collapse"
 										class="card-toggle collapsed" href="#faq5" aria-expanded="false"><i
-											class="fas fa-chevron-down"></i>Do you elementum turpis semper imperdiet?</a></h4>
+											class="fas fa-chevron-down"></i>Can you do modification on the already developed site?</a></h4>
 							</div>
 
 							<div class="card-collapse collapse" id="faq5">
 								<div class="card-body pt-0 theme-bg-light">
-									Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean
-									massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec
-									quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec
-									pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a,
-									venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium.
+									Yes, we will not mind top do modifications on the already developed sites.
 								</div>
 								<!--//card-body-->
 							</div>
@@ -349,16 +311,13 @@ I am having the expertise and high bug solving skills and could easily get on bo
 							<div class="card-header border-0 p-3 theme-bg-light">
 								<h4 class="card-title mb-0"><a data-parent="#faq-accordion" data-toggle="collapse"
 										class="card-toggle collapsed" href="#faq6" aria-expanded="false"><i
-											class="fas fa-chevron-down"></i>How much imperdiet lorem sem non nisl?</a></h4>
+											class="fas fa-chevron-down"></i>Will you build site on Wordpress?</a></h4>
 							</div>
 
 							<div class="card-collapse collapse" id="faq6">
 								<div class="card-body pt-0 theme-bg-light">
-									Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean
-									massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec
-									quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec
-									pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a,
-									venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium.
+									No, we will design your website on custom code which will be easy to understand and modified for other
+									developers.
 								</div>
 								<!--//card-body-->
 							</div>
@@ -368,35 +327,12 @@ I am having the expertise and high bug solving skills and could easily get on bo
 							<div class="card-header border-0 p-3 theme-bg-light">
 								<h4 class="card-title mb-0"><a data-parent="#faq-accordion" data-toggle="collapse"
 										class="card-toggle collapsed" href="#faq7" aria-expanded="false"><i
-											class="fas fa-chevron-down"></i>How long does it take to imperdiet lorem sem non nisl?</a></h4>
+											class="fas fa-chevron-down"></i>Will your designed web be able to change?</a></h4>
 							</div>
 
 							<div class="card-collapse collapse" id="faq7">
 								<div class="card-body pt-0 theme-bg-light">
-									Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean
-									massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec
-									quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec
-									pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a,
-									venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium.
-								</div>
-								<!--//card-body-->
-							</div>
-						</div>
-						<!--//card-->
-						<div class="card border-0 mb-3">
-							<div class="card-header border-0 p-3 theme-bg-light">
-								<h4 class="card-title mb-0"><a data-parent="#faq-accordion" data-toggle="collapse"
-										class="card-toggle collapsed" href="#faq8" aria-expanded="false"><i
-											class="fas fa-chevron-down"></i>Where can I imperdiet lorem sem non nisl?</a></h4>
-							</div>
-
-							<div class="card-collapse collapse" id="faq8">
-								<div class="card-body pt-0 theme-bg-light">
-									Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean
-									massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec
-									quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec
-									pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a,
-									venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium.
+									Yes, it will be easy to change for other developers easily.
 								</div>
 								<!--//card-body-->
 							</div>
