--- a/contact.html
+++ b/contact.html
@@ -92,9 +92,7 @@ I am having the expertise and high bug solving skills and could easily get on bo
 									<i class="fas fa-cogs fa-fw mr-2"></i>More Pages
 								</a>
 								<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-									<a class="dropdown-item" href="project.html">Project Page</a>
-									<a class="dropdown-item" href="blog-home.html">Blog Home 1</a>
-									<a class="dropdown-item" href="blog-home-alt.html">Blog Home 2</a>
+									<a class="dropdown-item" href="blog-home.html">Blog</a>
 									<a class="dropdown-item" href="blog-post.html">Blog Post</a>
 								</div>
 							</li>
@@ -172,6 +170,15 @@ I am having the expertise and high bug solving skills and could easily get on bo
 								<label class="sr-only" for="cemail">Email</label>
 								<input type="email" class="form-control" id="cemail" name="email" placeholder="Email" required=""
 									aria-required="true">
+							</div>
+							<div class="form-group col-12">
+								<select id="subject" class="custom-select" name="subject">
+									<option selected>Subject...</option>
+									<option value="basic">Improvements or Bug Fixing</option>
+									<option value="standard">Need help regarding</option>
+									<option value="premium">Premium</option>
+									<option value="not sure">Not sure</option>
+								</select>
 							</div>
 							<div class="form-group col-12">
 								<select id="services" class="custom-select" name="services">
