--- a/index.html
+++ b/index.html
@@ -92,9 +92,7 @@ I am having the expertise and high bug solving skills and could easily get on bo
 									<i class="fas fa-cogs fa-fw mr-2"></i>More Pages
 								</a>
 								<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-									<a class="dropdown-item" href="project.html">Project Page</a>
-									<a class="dropdown-item" href="blog-home.html">Blog Home 1</a>
-									<a class="dropdown-item" href="blog-home-alt.html">Blog Home 2</a>
+									<a class="dropdown-item" href="blog-home.html">Blog</a>
 									<a class="dropdown-item" href="blog-post.html">Blog Post</a>
 								</div>
 							</li>
@@ -283,8 +281,10 @@ I am having the expertise and high bug solving skills and could easily get on bo
 						<div class="item">
 							<div class="quote-holder">
 								<blockquote class="quote-content">
-									Simon is a brilliant software engineer! Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-									Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis.
+									M.Ayoub Khan is very-very talented. He worked expressly fast and
+									did one extra task without charging me. Very nice of him. He
+									is definitely my go to guy. For everything Web development you
+									will not going to regret working with him. Highly recommended.
 								</blockquote>
 								<i class="fas fa-quote-left"></i>
 							</div>
@@ -294,8 +294,8 @@ I am having the expertise and high bug solving skills and could easily get on bo
 									<img src="./assets/images/clients/profile-1.png" alt="image" />
 								</div>
 								<div class="meta">
-									<div class="name">Brandon James</div>
-									<div class="info">Project Manager, Google</div>
+									<div class="name">Inshad Bajwa</div>
+									<div class="info">Buyer, Fiver</div>
 								</div>
 							</div>
 						</div>
@@ -303,8 +303,9 @@ I am having the expertise and high bug solving skills and could easily get on bo
 						<div class="item">
 							<div class="quote-holder">
 								<blockquote class="quote-content">
-									Simon is a brilliant software engineer! Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-									Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis.
+									Highly Recommend!! He is fast and very responsive...Speaks
+									Perfect English One of the Best pros Will definitely use
+									AGAIN!!!!!
 								</blockquote>
 								<i class="fas fa-quote-left"></i>
 							</div>
@@ -314,8 +315,8 @@ I am having the expertise and high bug solving skills and could easily get on bo
 									<img src="./assets/images/clients/profile-2.png" alt="image" />
 								</div>
 								<div class="meta">
-									<div class="name">Kate Sanders</div>
-									<div class="info">Project Manager, Uber</div>
+									<div class="name">Fatima Emily</div>
+									<div class="info">Buyer, Fiver</div>
 								</div>
 							</div>
 						</div>
@@ -323,8 +324,7 @@ I am having the expertise and high bug solving skills and could easily get on bo
 						<div class="item">
 							<div class="quote-holder">
 								<blockquote class="quote-content">
-									Simon is a brilliant software engineer! Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-									Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis.
+									fast responsive, deliver on time.
 								</blockquote>
 								<i class="fas fa-quote-left"></i>
 							</div>
@@ -334,8 +334,8 @@ I am having the expertise and high bug solving skills and could easily get on bo
 									<img src="./assets/images/clients/profile-3.png" alt="image" />
 								</div>
 								<div class="meta">
-									<div class="name">James Lee</div>
-									<div class="info">Product Manager, Amazon</div>
+									<div class="name">idan_ash</div>
+									<div class="info">Buyer, Fiver</div>
 								</div>
 							</div>
 						</div>
@@ -423,9 +423,11 @@ I am having the expertise and high bug solving skills and could easily get on bo
 									</div>
 									<div class="col-lg-8">
 										<div class="card-body">
-											<h5 class="card-title"><a href="project.html" class="theme-link">Project Heading</a></h5>
-											<p class="card-text">Project intro lorem ipsum dolor sit amet, consectetuer adipiscing elit. Cum
-												sociis natoque penatibus et magnis dis parturient montes.</p>
+											<h5 class="card-title"><a href="project.html" class="theme-link">HMS Vuejs Online CV Resume</a>
+											</h5>
+											<p class="card-text">The most complete & A Nice Boilerplate Template for creating your online
+												resume or cv in Vue.js, Its a boilerplate for production-ready PWAs. With focus on performance,
+												development speed, and best practices.</p>
 											<p class="card-text"><small class="text-muted">Client: Google</small></p>
 										</div>
 									</div>
@@ -433,8 +435,9 @@ I am having the expertise and high bug solving skills and could easily get on bo
 								<div class="link-mask">
 									<a class="link-mask-link" href="project.html"></a>
 									<div class="link-mask-text">
-										<a class="btn btn-secondary" href="project.html">
-											<i class="fas fa-eye mr-2"></i>View Case Study
+										<a target="_blank" class="btn btn-secondary"
+											href="https://ayoubkhan-projects.github.io/hms-vuejs-online-cv-resume">
+											<i class="fas fa-eye mr-2"></i>View Live
 										</a>
 									</div>
 								</div>
@@ -451,18 +454,19 @@ I am having the expertise and high bug solving skills and could easily get on bo
 									</div>
 									<div class="col-lg-8">
 										<div class="card-body">
-											<h5 class="card-title"><a href="project.html" class="theme-link">Project Heading</a></h5>
-											<p class="card-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Cum sociis natoque
-												penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
-											<p class="card-text"><small class="text-muted">Client: Dropbox</small></p>
+											<h5 class="card-title"><a href="project.html" class="theme-link">Free-Ela</a></h5>
+											<p class="card-text">Free-ela is a Micro Job Marketplace site where you can sell or buy service at
+												a incredible price.
+												I have worked with HTML5, CSS3, Scss, Javascript, QJuery and forms on this project.</p>
+											<p class="card-text"><small class="text-muted">Client: Hafiz Aqib</small></p>
 										</div>
 									</div>
 								</div>
 								<div class="link-mask">
 									<a class="link-mask-link" href="project.html"></a>
 									<div class="link-mask-text">
-										<a class="btn btn-secondary" href="project.html">
-											<i class="fas fa-eye mr-2"></i>View Case Study
+										<a target="_blank" class="btn btn-secondary" href="https://free-ela.netlify.com/">
+											<i class="fas fa-eye mr-2"></i>View Detail
 										</a>
 									</div>
 								</div>
@@ -489,8 +493,8 @@ I am having the expertise and high bug solving skills and could easily get on bo
 								<div class="link-mask">
 									<a class="link-mask-link" href="project.html"></a>
 									<div class="link-mask-text">
-										<a class="btn btn-secondary" href="project.html">
-											<i class="fas fa-eye mr-2"></i>View Case Study
+										<a target="_blank" class="btn btn-secondary" href="project.html">
+											<i class="fas fa-eye mr-2"></i>View Detail
 										</a>
 									</div>
 								</div>
@@ -517,8 +521,8 @@ I am having the expertise and high bug solving skills and could easily get on bo
 								<div class="link-mask">
 									<a class="link-mask-link" href="project.html"></a>
 									<div class="link-mask-text">
-										<a class="btn btn-secondary" href="project.html">
-											<i class="fas fa-eye mr-2"></i>View Case Study
+										<a target="_blank" class="btn btn-secondary" href="project.html">
+											<i class="fas fa-eye mr-2"></i>View Detail
 										</a>
 									</div>
 								</div>
