--- a/project.html
+++ b/project.html
@@ -91,10 +91,7 @@ I am having the expertise and high bug solving skills and could easily get on bo
 									<i class="fas fa-cogs fa-fw mr-2"></i>More Pages
 								</a>
 								<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-									<a class="dropdown-item active" href="project.html">Project Page<span
-											class="sr-only">(current)</span></a>
-									<a class="dropdown-item" href="blog-home.html">Blog Home 1</a>
-									<a class="dropdown-item" href="blog-home-alt.html">Blog Home 2</a>
+									<a class="dropdown-item" href="blog-home.html">Blog</a>
 									<a class="dropdown-item" href="blog-post.html">Blog Post</a>
 								</div>
 							</li>
@@ -124,7 +121,7 @@ I am having the expertise and high bug solving skills and could easily get on bo
 		<div class="main-wrapper">
 			<section class="cta-section theme-bg-light py-5">
 				<div class="container single-col-max-width">
-					<h2 class="heading text-center">Case Study: Project Name</h2>
+					<h2 class="heading text-center">Project Name</h2>
 					<div class="project-intro text-center">
 						<p class="mb-0 lead">Project intro goes here. In the intro it's a good idea to answer a potential client's
 							need/problem so it's more likely to land your next project or job.</p>
@@ -187,7 +184,7 @@ I am having the expertise and high bug solving skills and could easily get on bo
 						<!--//project-section-->
 
 						<div class="project-section mb-5">
-							<h3 class="project-section-title">The Approach &amp; Solution</h3>
+							<h3 class="project-section-title">Project Screenshots</h3>
 							<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean
 								massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam
 								felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede
